k8s/apps/teamcity-system/teamcity-server/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app teamcity-server
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
    spec:
      serviceAccountName: teamcity-server
      volumes:
        - name: teamcity-data
          persistentVolumeClaim:
            claimName: teamcity-data
        - name: postgres-jdbc
          configMap:
            name: postgres-jdbc
        - name: caches
          emptyDir: {}
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: teamcity
          image: jetbrains/teamcity-server:2025.07
          resources:
            requests:
              memory: &ram "2Gi"
              cpu: "500m"
            limits:
              memory: *ram
          ports:
            - containerPort: 8111
              name: web
          volumeMounts:
            - mountPath: /data/teamcity_server/datadir
              name: teamcity-data
            - mountPath: /data/teamcity_server/datadir/lib/jdbc
              name: postgres-jdbc
            - mountPath: /data/teamcity_server/datadir/system/caches
              name: caches
