k8s/apps/teamcity-system/teamcity-server/app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: teamcity-server
spec:
  selector:
    app: teamcity-server
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: web
