k8s/apps/teamcity-system/teamcity-server/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teamcity-server
  labels:
    name: teamcity-server
spec:
  rules:
    - host: &host teamcity.cbannister.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: teamcity-server
                port:
                  name: web
  tls:
    - hosts:
        - *host
